--- a/src/implementations/vanilla/components/site-header-core/site-header-core-eu.scss
+++ b/src/implementations/vanilla/components/site-header-core/site-header-core-eu.scss
@@ -41,7 +41,7 @@ $_search-width-xl: 31.5rem;
 .ecl-site-header-core__logo-link {
   flex-grow: 1;
   margin-bottom: calc(#{map.get(theme.$spacing, 'l')} + 1px);
-  margin-top: map.get(theme.$spacing, 'xs');
+  margin-top: map.get(theme.$spacing, 'm');
 }
 
 .ecl-site-header-core__logo-image-mobile {
@@ -189,6 +189,9 @@ $_search-width-xl: 31.5rem;
 }
 
 @include breakpoints.up('m') {
+  .ecl-site-header-core__logo-link {
+    margin-top: map.get(theme.$spacing, 'xs');
+  }
   /* stylelint-disable-next-line plugin/selector-bem-pattern */
   .ecl-search-form {
     max-width: 100%;
